--- a/pom.xml
+++ b/pom.xml
@@ -18,13 +18,13 @@
 		<dependency>
 			<groupId>com.github.ukgovld</groupId>
 			<artifactId>registry-core</artifactId>
-			<version>2.2.1-SNAPSHOT</version>
+			<version>2.3.0</version>
 			<type>war</type>
 		</dependency>
 		<dependency>
 			<groupId>com.github.ukgovld</groupId>
 			<artifactId>registry-core</artifactId>
-			<version>2.2.1-SNAPSHOT</version>
+			<version>2.3.0</version>
 			<classifier>classes</classifier>
 		</dependency>
 		<dependency>
