Update repository urls to http

--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,7 @@
 		<repository>
 			<id>ukgovld-s3-release</id>
 			<name>UKGovLD release repository</name>
-			<url>s3://ukgovld/release</url>
+			<url>http://ukgovld.s3-eu-west-1.amazonaws.com/release</url>
 			<releases>
 				<enabled>true</enabled>
 			</releases>
@@ -74,7 +74,7 @@
 		<repository>
 			<id>ukgovld-s3-snapshot</id>
 			<name>UKGovLD snapshot repository</name>
-			<url>s3://ukgovld/snapshot</url>
+			<url>http://ukgovld.s3-eu-west-1.amazonaws.com/snapshot</url>
 			<releases>
 				<enabled>false</enabled>
 			</releases>
